k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployaz-demo
  labels:
    app.kubernetes.io/part-of: deployaz-platform
