k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployaz-demo
  namespace: deployaz-demo
  labels:
    app: deployaz-demo
spec:
  selector:
    app: deployaz-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
